Added leaflet package

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sinon": "~1.7.3",
     "hazdev-template": "~0.0.4",
     "grunt-connect-rewrite": "~0.1.1",
-    "grunt-connect-proxy": "~0.1.6"
+    "grunt-connect-proxy": "~0.1.6",
+    "leaflet": "~0.7.0"
   },
   "engines": {
     "node": ">=0.8.0"
