--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "hazdev-tablist": "~0.0.2"
   },
   "devDependencies": {
     "chai": "~1.7.0",
@@ -37,7 +36,8 @@
     "matchdep": "~0.1.2",
     "mocha": "~1.9.0",
     "sinon": "~1.7.3",
-    "hazdev-template": "~0.0.4",
+    "hazdev-tablist": "~0.0.3",
+    "hazdev-template": "~0.0.6",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-connect-proxy": "~0.1.6",
     "leaflet": "~0.7.0"
