--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "~1.7.0",
     "connect-livereload": "~0.2.0",
@@ -40,7 +39,8 @@
     "hazdev-template": "~0.0.6",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-connect-proxy": "~0.1.6",
-    "leaflet": "~0.7.0"
+    "leaflet": "~0.7.0",
+    "hazdev-svgimagemap": "0.0.3"
   },
   "engines": {
     "node": ">=0.8.0"
