Added location view as a dependency.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "grunt-connect-proxy": "~0.1.6",
     "leaflet": "~0.7.0",
     "hazdev-svgimagemap": "0.0.3",
-    "quakeml-parser-js": "0.0.1"
+    "quakeml-parser-js": "0.0.1",
+    "hazdev-location-view": "0.0.1"
   },
   "engines": {
     "node": ">=0.8.0"
