--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "matchdep": "~0.1.2",
     "mocha": "~1.9.0",
     "sinon": "~1.7.3",
-    "hazdev-tablist": "0.0.4",
+    "hazdev-tablist": "~0.0.5",
     "hazdev-template": "~0.0.9",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-connect-proxy": "~0.1.6",
