--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "earthquake-eventpages",
-  "version": "0.0.2",
+  "version": "0.0.1-rc",
   "description": "Web application for displaying earthquake event pages.",
   "repository": {
     "type": "git",
