Add include for hazdev-accordion

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "quakeml-parser-js": "0.0.1",
     "hazdev-location-view": "0.0.6",
     "hazdev-question-view": "0.0.2",
-    "hazdev-webutils": "0.0.13"
+    "hazdev-webutils": "0.0.13",
+    "hazdev-accordion": "0.0.1"
   },
   "engines": {
     "node": ">=0.8.0"
