--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "hazdev-location-view": "0.0.6",
     "hazdev-question-view": "0.0.2",
     "hazdev-webutils": "0.0.13",
-    "hazdev-accordion": "0.0.1"
+    "hazdev-accordion": "0.0.1",
+    "ini": "^1.2.1"
   },
   "engines": {
     "node": ">=0.8.0"
