--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mocha": "~1.9.0",
     "sinon": "~1.7.3",
     "hazdev-tablist": "~0.0.6",
-    "hazdev-template": "0.1.0",
+    "hazdev-template": "usgs/hazdev-template",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-connect-proxy": "0.1.10",
     "leaflet": "~0.7.0",
