Using git trunk url for dependencies so they stay updated during development.

--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-connect-proxy": "0.1.10",
     "leaflet": "~0.7.0",
-    "hazdev-svgimagemap": "0.0.3",
-    "quakeml-parser-js": "0.0.1",
-    "hazdev-location-view": "0.0.6",
-    "hazdev-question-view": "0.0.2",
-    "hazdev-webutils": "0.0.15",
+    "hazdev-svgimagemap": "usgs/hazdev-svgimagemap",
+    "quakeml-parser-js": "usgs/quakeml-parser-js",
+    "hazdev-location-view": "usgs/hazdev-location-view",
+    "hazdev-question-view": "usgs/hazdev-question-view",
+    "hazdev-webutils": "usgs/hazdev-webutils",
     "hazdev-accordion": "usgs/hazdev-accordion",
     "ini": "^1.2.1"
   },
