--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
   },
   "devDependencies": {
     "chai": "~1.7.0",
-    "connect-livereload": "~0.2.0",
     "gateway": "~0.1.1",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~0.3.0",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-htmlmin": "~0.1.3",
@@ -32,13 +31,11 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-mocha-phantomjs": "~0.2.8",
-    "grunt-open": "~0.2.0",
     "grunt-text-replace": "~0.3.6",
-    "matchdep": "~0.1.2",
     "mocha": "~1.9.0",
     "sinon": "~1.7.3",
     "hazdev-tablist": "usgs/hazdev-tablist",
-    "hazdev-template": "usgs/hazdev-template",
+    "hazdev-template": "usgs/hazdev-template#5c8e22639b5fd9c7d01420834eedb2478d8853e6",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-connect-proxy": "0.1.10",
     "leaflet": "~0.7.0",
@@ -46,7 +43,7 @@
     "quakeml-parser-js": "usgs/quakeml-parser-js",
     "hazdev-location-view": "usgs/hazdev-location-view",
     "hazdev-question-view": "usgs/hazdev-question-view",
-    "hazdev-webutils": "usgs/hazdev-webutils",
+    "hazdev-webutils": "usgs/hazdev-webutils#e5261c4538ee71e0d347206b10ed4a950f49106e",
     "hazdev-accordion": "usgs/hazdev-accordion",
     "ini": "^1.2.1"
   },
