alphabetize dependencies, lock into require versions until converted to browserify

--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
     "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-jshint": "~0.6.0",
+    "grunt-connect-proxy": "0.1.10",
     "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-connect-rewrite": "~0.1.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-mocha-phantomjs": "~0.2.8",
     "grunt-text-replace": "~0.3.6",
-    "mocha": "~1.9.0",
-    "sinon": "~1.7.3",
-    "hazdev-tablist": "usgs/hazdev-tablist",
-    "hazdev-template": "usgs/hazdev-template#5c8e22639b5fd9c7d01420834eedb2478d8853e6",
-    "grunt-connect-rewrite": "~0.1.1",
-    "grunt-connect-proxy": "0.1.10",
-    "leaflet": "~0.7.0",
-    "hazdev-svgimagemap": "usgs/hazdev-svgimagemap",
-    "quakeml-parser-js": "usgs/quakeml-parser-js",
+    "hazdev-accordion": "usgs/hazdev-accordion",
     "hazdev-location-view": "usgs/hazdev-location-view",
     "hazdev-question-view": "usgs/hazdev-question-view",
+    "hazdev-svgimagemap": "usgs/hazdev-svgimagemap#a1615606e2505e4b5c0b60d52d195e6c46f5ef67",
+    "hazdev-tablist": "usgs/hazdev-tablist#7c61322737f6c5eb15d4fa56107a1a2ae173cd9c",
+    "hazdev-template": "usgs/hazdev-template#5c8e22639b5fd9c7d01420834eedb2478d8853e6",
     "hazdev-webutils": "usgs/hazdev-webutils#e5261c4538ee71e0d347206b10ed4a950f49106e",
-    "hazdev-accordion": "usgs/hazdev-accordion",
-    "ini": "^1.2.1"
+    "ini": "^1.2.1",
+    "leaflet": "~0.7.0",
+    "mocha": "~1.9.0",
+    "quakeml-parser-js": "usgs/quakeml-parser-js",
+    "sinon": "~1.7.3"
   },
   "engines": {
     "node": ">=0.8.0"
