--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "chai": "~1.7.0",
     "gateway": "~0.1.1",
     "grunt": "~0.4.1",
+    "grunt-browserify": "^3.3.0",
     "grunt-concurrent": "~0.3.0",
+    "grunt-connect-proxy": "0.1.10",
+    "grunt-connect-rewrite": "~0.1.1",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-connect": "~0.9.0",
@@ -27,9 +30,6 @@
     "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-connect-proxy": "0.1.10",
-    "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-connect-rewrite": "~0.1.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-mocha-phantomjs": "~0.2.8",
