--- a/package.json
+++ b/package.json
@@ -13,25 +13,23 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "requirejs": "2.1.12"
   },
   "devDependencies": {
     "chai": "~1.7.0",
-    "gateway": "~0.1.1",
+    "gateway": "~1.0.0",
     "grunt": "~0.4.1",
     "grunt-browserify": "^3.3.0",
     "grunt-concurrent": "~0.3.0",
-    "grunt-connect-proxy": "0.1.10",
+    "grunt-connect-proxy": "~0.1.11",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-mocha-phantomjs": "~0.2.8",
     "grunt-text-replace": "~0.3.6",
     "hazdev-accordion": "usgs/hazdev-accordion",
