--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "grunt": "~0.4.1",
     "grunt-browserify": "^3.3.0",
     "grunt-concurrent": "~0.3.0",
-    "grunt-connect-proxy": "~0.1.11",
+    "grunt-connect-proxy": "0.1.10",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-compass": "~0.2.0",
