--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "~1.7.0",
+    "compression": "^1.4.1",
     "gateway": "~1.0.0",
     "grunt": "~0.4.1",
     "grunt-browserify": "^3.3.0",
