--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
     "chai": "~1.7.0",
     "compression": "^1.4.1",
+    "cssnano": "^3.3.1",
     "gateway": "~1.0.0",
     "grunt": "~0.4.1",
     "grunt-browserify": "^3.3.0",
@@ -23,14 +25,13 @@
     "grunt-connect-proxy": "0.1.10",
     "grunt-connect-rewrite": "~0.1.1",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "~0.8.0",
-    "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-mocha-phantomjs": "~0.5.0",
+    "grunt-postcss": "^0.7.0",
     "hazdev-accordion": "usgs/hazdev-accordion",
     "hazdev-location-view": "usgs/hazdev-location-view",
     "hazdev-question-view": "usgs/hazdev-question-view",
@@ -41,6 +42,9 @@
     "ini": "^1.2.1",
     "leaflet": "~0.7.0",
     "mocha": "~1.13.0",
+    "postcss-calc": "^5.0.0",
+    "postcss-import": "^7.1.0",
+    "precss": "^1.3.0",
     "quakeml-parser-js": "usgs/quakeml-parser-js",
     "sinon": "~1.12.2"
   },
