--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
-language: node_js
+sudo: false
+language: php
 node_js:
-  - '0.8'
-  - '0.10'
+  - '5.6'
+before_install:
+  - gem update --system
+  - composer self-update
+  - nvm install stable
+  - nvm use stable
+  - npm install -g grunt-cli
+  - npm --version
+  - node --version
+  - npm list -g
+install:
+  - npm install phantomjs
+  - npm install
+script:
+  - npm test
