--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - npm --version
   - node --version
   - npm list -g
+  - php src/lib/pre-install.php
 install:
   - npm install phantomjs
   - npm install
