Request non-interactive mode explicitly

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - npm --version
   - node --version
   - npm list -g
-  - php src/lib/pre-install.php
+  - php src/lib/pre-install.php --non-interactive
 install:
   - npm install phantomjs
   - npm install
