--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-phantomjs": "^2.0.0",
     "grunt-postcss": "^0.7.0",
-    "hazdev-accordion": "usgs/hazdev-accordion",
-    "hazdev-location-view": "usgs/hazdev-location-view",
-    "hazdev-question-view": "usgs/hazdev-question-view",
-    "hazdev-svgimagemap": "usgs/hazdev-svgimagemap",
-    "hazdev-tablist": "usgs/hazdev-tablist",
-    "hazdev-template": "usgs/hazdev-template",
-    "hazdev-webutils": "usgs/hazdev-webutils",
+    "hazdev-accordion": "0.1.0",
+    "hazdev-location-view": "0.1.0",
+    "hazdev-question-view": "0.1.0",
+    "hazdev-svgimagemap": "0.0.4",
+    "hazdev-tablist": "0.1.0",
+    "hazdev-template": "0.2.0",
+    "hazdev-webutils": "0.1.0",
     "ini": "^1.2.1",
     "leaflet": "^0.7.0",
     "mocha": "^2.1.0",
     "postcss-calc": "^5.0.0",
     "postcss-import": "^7.1.0",
     "precss": "^1.3.0",
-    "quakeml-parser-js": "usgs/quakeml-parser-js",
+    "quakeml-parser-js": "0.0.2",
     "sinon": "^1.17.1"
   },
   "engines": {
