--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-phantomjs": "^2.0.0",
     "grunt-postcss": "^0.7.0",
-    "hazdev-accordion": "0.1.0",
-    "hazdev-location-view": "0.1.0",
-    "hazdev-question-view": "0.1.0",
-    "hazdev-svgimagemap": "0.0.4",
-    "hazdev-tablist": "0.1.0",
-    "hazdev-template": "0.2.0",
-    "hazdev-webutils": "0.1.0",
+    "hazdev-accordion": "~0.1.0",
+    "hazdev-location-view": "~0.1.0",
+    "hazdev-question-view": "~0.1.0",
+    "hazdev-svgimagemap": "~0.0.4",
+    "hazdev-tablist": "~0.1.0",
+    "hazdev-template": "~0.2.0",
+    "hazdev-webutils": "~0.1.0",
     "ini": "^1.2.1",
     "leaflet": "^0.7.0",
     "mocha": "^2.1.0",
