Scaffold out the Intensity vs Distance plots for the DYFI page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "^3.4.0",
     "compression": "^1.6.0",
     "cssnano": "^3.3.1",
+    "d3": "^3.5.12",
     "gateway": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
@@ -33,6 +34,7 @@
     "grunt-mocha-phantomjs": "^2.0.0",
     "grunt-postcss": "^0.7.0",
     "hazdev-accordion": "~0.1.0",
+    "hazdev-d3": "usgs/hazdev-d3",
     "hazdev-location-view": "~0.2.0",
     "hazdev-question-view": "~0.1.0",
     "hazdev-svgimagemap": "~0.0.4",
