--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "hazdev-template": "~0.2.1",
     "hazdev-webutils": "~0.1.7",
     "ini": "^1.2.1",
-    "leaflet": "^0.7.0",
+    "leaflet": "0.7.7",
     "mocha": "^2.1.0",
     "postcss-calc": "^5.0.0",
     "postcss-import": "^7.1.0",
