--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hazdev-accordion": "~0.1.0",
     "hazdev-geoserve-ws": "~1.1.1",
     "hazdev-d3": "usgs/hazdev-d3",
+    "hazdev-leaflet": "../hazdev-leaflet",
     "hazdev-location-view": "~0.2.0",
     "hazdev-question-view": "~0.1.0",
     "hazdev-svgimagemap": "~0.0.4",
