--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "hazdev-svgimagemap": "usgs/hazdev-svgimagemap",
     "hazdev-tablist": "~0.1.0",
     "hazdev-template": "~0.2.1",
-    "hazdev-webutils": "~0.1.7",
+    "hazdev-webutils": "usgs/hazdev-webutils",
     "ini": "^1.2.1",
     "leaflet": "0.7.7",
     "mocha": "^2.1.0",
