--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "hazdev-leaflet": "usgs/hazdev-leaflet",
     "hazdev-location-view": "~0.2.0",
     "hazdev-question-view": "~0.1.0",
-    "hazdev-svgimagemap": "~0.0.4",
+    "hazdev-svgimagemap": "usgs/hazdev-svgimagemap",
     "hazdev-tablist": "~0.1.0",
     "hazdev-template": "~0.2.1",
     "hazdev-webutils": "~0.1.7",
