--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-phantomjs": "^2.0.0",
+    "grunt-mocha-phantomjs": "3.0.0",
     "grunt-postcss": "^0.7.0",
     "hazdev-accordion": "~0.1.0",
     "hazdev-geoserve-ws": "~1.1.1",
