changed some versions

--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "hazdev-geoserve-ws": "~1.1.1",
     "hazdev-d3": "usgs/hazdev-d3",
     "hazdev-leaflet": "usgs/hazdev-leaflet",
-    "hazdev-location-view": "~0.2.0",
+    "hazdev-location-view": "usgs/hazdev-location-view",
     "hazdev-question-view": "~0.1.0",
     "hazdev-svgimagemap": "usgs/hazdev-svgimagemap",
     "hazdev-tablist": "~0.1.0",
-    "hazdev-template": "~0.2.1",
+    "hazdev-template": "usgs/hazdev-template",
     "hazdev-webutils": "usgs/hazdev-webutils",
     "ini": "^1.2.1",
     "leaflet": "0.7.7",
