--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "hazdev-accordion": "~0.1.0",
     "hazdev-geoserve-ws": "~1.1.1",
     "hazdev-d3": "~0.2.1",
-    "hazdev-leaflet": "~0.1.2",
+    "hazdev-leaflet": "usgs/hazdev-leaflet",
     "hazdev-location-view": "~0.2.3",
     "hazdev-question-view": "~0.1.0",
     "hazdev-svgimagemap": "~0.0.9",
