--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "hazdev-geoserve-ws": "~1.1.1",
     "hazdev-d3": "~0.2.1",
     "hazdev-leaflet": "usgs/hazdev-leaflet",
-    "hazdev-location-view": "~0.2.3",
+    "hazdev-location-view": "^0.4.3",
     "hazdev-question-view": "~0.1.0",
     "hazdev-svgimagemap": "~0.0.9",
     "hazdev-tablist": "~0.1.0",
