--- a/package.json
+++ b/package.json
@@ -15,42 +15,42 @@
   "license": "CC0-1.0",
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
-    "chai": "^3.4.0",
+    "autoprefixer": "6.0.3",
+    "chai": "3.4.1",
     "compression": "^1.6.0",
-    "cssnano": "^3.3.1",
+    "cssnano": "3.4.0",
     "d3": "^3.5.12",
-    "gateway": "^1.0.0",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-connect-proxy": "^0.2.0",
-    "grunt-connect-rewrite": "^0.2.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "gateway": "1.0.0",
+    "grunt": "0.4.5",
+    "grunt-browserify": "4.0.1",
+    "grunt-connect-proxy": "0.2.0",
+    "grunt-connect-rewrite": "0.2.1",
+    "grunt-contrib-clean": "0.7.0",
+    "grunt-contrib-connect": "0.11.2",
+    "grunt-contrib-copy": "0.8.2",
+    "grunt-contrib-jshint": "0.12.0",
+    "grunt-contrib-uglify": "0.11.0",
+    "grunt-contrib-watch": "0.6.1",
     "grunt-mocha-phantomjs": "3.0.0",
-    "grunt-postcss": "^0.7.0",
-    "hazdev-accordion": "~0.1.0",
-    "hazdev-geoserve-ws": "~1.1.1",
-    "hazdev-d3": "~0.2.1",
+    "grunt-postcss": "0.7.1",
+    "hazdev-accordion": "0.1.1",
+    "hazdev-geoserve-ws": "1.1.2",
+    "hazdev-d3": "0.2.2",
     "hazdev-leaflet": "0.3.0",
-    "hazdev-location-view": "^0.4.3",
-    "hazdev-question-view": "~0.1.0",
-    "hazdev-svgimagemap": "~0.0.9",
-    "hazdev-tablist": "~0.1.0",
-    "hazdev-template": "~0.2.4",
-    "hazdev-webutils": "~0.1.8",
-    "ini": "^1.2.1",
+    "hazdev-location-view": "0.4.3",
+    "hazdev-question-view": "0.1.0",
+    "hazdev-svgimagemap": "0.0.9",
+    "hazdev-tablist": "0.1.2",
+    "hazdev-template": "1.2.0",
+    "hazdev-webutils": "0.1.9",
+    "ini": "1.3.4",
     "leaflet": "0.7.7",
-    "mocha": "^2.1.0",
+    "mocha": "2.1.0",
     "postcss-calc": "^5.0.0",
-    "postcss-import": "^7.1.0",
-    "precss": "^1.3.0",
+    "postcss-import": "7.1.3",
+    "precss": "1.4.0",
     "quakeml-parser-js": "~0.0.3",
-    "sinon": "^1.17.1"
+    "sinon": "1.17.2"
   },
   "engines": {
     "node": ">=0.10.0"
