--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.5",
-    "@angular/cdk": "^5.2.1",
+    "@angular/cdk": "^5.2.2",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
-    "@angular/material": "^5.2.1",
+    "@angular/material": "^5.2.2",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "hazdev-template": "^2.1.5",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
