Add more debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ before_script:
 script:
 #  - ng lint
 #  - ng test --single-run --code-coverage
+  - pwd
+  - ls -al
   - npm run e2e
 #  - ng build --prod --base-href /earthquakes/eventpage/
 
