--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "hazdev-template": "^2.1.5",
+    "leaflet": "^1.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
