Fixing rewrites for ng/nginx.

--- a/00-server.conf
+++ b/00-server.conf
@@ -1,5 +1,5 @@
 
-location / {
+location /beta/earthquakes/eventpage {
   add_header  'X-Frame-Options'  'DENY';
   add_header  'X-Content-Type-Options'  'nosniff';
   add_header  'X-XSS-Protection'  '1';
@@ -8,5 +8,5 @@ location / {
 }
 
 location @angular-fallback {
-  rewrite ^(.*)$ /index.html last;
+  rewrite ^(.*)$ /beta/earthquakes/eventpage/index.html last;
 }
