--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "hazdev-template": "^2.1.6",
     "leaflet": "^1.3.1",
     "rxjs": "^5.5.7",
-    "zone.js": "git://github.com/JiaLiPassion/zone.js.git#jasmine-dist"
+    "zone.js": "https://github.com/JiaLiPassion/zone.js/archive/jasmine-fix.tar.gz"
   },
   "devDependencies": {
     "@angular-devkit/core": "^0.4.6",
