--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",
     "core-js": "^2.4.1",
+    "earthquake-geoserve-ui": "0.0.4",
     "hazdev-template": "^2.1.6",
     "leaflet": "^1.3.1",
     "rxjs": "^5.5.7",
