Update angular.json to include e2e proxy config
using e2e proxy for ng serve as well as ng e2e

--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "earthquake-eventpages:build"
+            "browserTarget": "earthquake-eventpages:build",
+            "proxyConfig": "e2e/proxy.conf.json"
           },
           "configurations": {
             "e2e": {
