--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/elements": "^6.0.4",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/material": "^6.1.0",
@@ -29,7 +30,8 @@
     "leaflet": "^1.3.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "document-register-element": "^1.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
