--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^10.1.2",
+    "babel-polyfill": "^6.26.0",
     "codelyzer": "^4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
