--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@swimlane/ngx-charts": "^8.0.2",
     "core-js": "^2.5.6",
     "d3": "^5.4.0",
+    "document-register-element": "^1.7.2",
     "earthquake-geoserve-ui": "0.0.4",
+    "hazdev-location-input": "0.0.1",
     "hazdev-template": "^2.2.0",
     "leaflet": "^1.3.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
-    "zone.js": "0.8.26",
-    "document-register-element": "^1.7.2"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
