--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@swimlane/ngx-charts": "^8.0.2",
     "core-js": "^2.5.6",
     "d3": "^5.4.0",
-    "document-register-element": "^1.7.2",
+    "document-register-element": "1.8.1",
     "earthquake-geoserve-ui": "0.0.4",
     "hazdev-ng-location-input": "~0.1.1",
     "hazdev-template": "^2.2.0",
