Improve DYFI charts code, move DYFI service

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,9 @@
             "scripts": [
               {
                 "input": "node_modules/document-register-element/build/document-register-element.js"
+              },
+              {
+                "input": "node_modules/document-register-element/build/document-register-element.js"
               }
             ]
           },
