--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "d3": "^5.4.0",
     "document-register-element": "1.8.1",
     "earthquake-geoserve-ui": "0.0.4",
-    "hazdev-ng-location-input": "~0.1.1",
+    "hazdev-ng-location-view": "0.0.3",
     "hazdev-template": "^2.2.0",
     "leaflet": "^1.3.1",
     "rxjs": "^6.2.0",
