--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "protractor": "^5.3.2",
     "ts-node": "~6.0.3",
     "tslint": "~5.10.0",
-    "typescript": "^2.7.2"
+    "typescript": "2.7.2"
   }
 }
