--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ php:
   - '5.6'
 before_install:
   - composer self-update
-  - nvm install stable
-  - nvm use stable
+  - nvm install 4.5.0
+  - nvm use 4.5.0
   - npm install -g grunt-cli
   - npm --version
   - node --version
