Fixing remaining linting errors.

--- a/angular.json
+++ b/angular.json
@@ -117,13 +117,9 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "tslintConfig": "tslint.json",
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -143,12 +139,9 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["e2e/tsconfig.e2e.json"],
+            "tslintConfig": "tslint.json",
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
