--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "leaflet": "^1.3.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
+    "string-similarity": "^1.2.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
