--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "core-js": "^2.5.6",
     "d3": "^5.4.0",
     "document-register-element": "1.8.1",
-    "earthquake-geoserve-ui": "0.0.4",
+    "hazdev-ng-geoserve-output": "0.0.2",
     "hazdev-ng-location-view": "0.0.3",
     "hazdev-template": "^2.2.0",
     "leaflet": "^1.3.1",
