--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "document-register-element": "1.8.1",
     "hazdev-ng-geoserve-output": "0.0.2",
     "hazdev-ng-location-view": "0.0.4",
-    "hazdev-template": "^2.2.0",
+    "hazdev-ng-template": "0.0.1",
     "leaflet": "^1.3.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.1.0",
